# TraceRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/dev/: config.yaml
data/knowledge_base/company/: about.md  careers.md  overview.md
data/knowledge_base/freelancers/: hiring-process.md
data/knowledge_base/getting-started/: what-is-shakers.md
data/knowledge_base/platform/: shakers-ai.md  squads.md
data/resources/: external_articles.json  generated_resources.json  tutorials.json
data/schemas/: recommendation_schema.json  resource_schema.json  user_profile_schema.json
data/users/: user_001_startup_founder.json  user_002_marketing_director.json  user_003_hr_manager.json  user_004_product_manager.json
src/: app.py
src/core/: __init__.py  config_manager.py  embedder.py
src/core/reranker/: __init__.py  base_reranker.py  jina_provider.py  reranker_handler.py
src/database/: __init__.py  sql_handler.py  vector_handler.py
src/llm_provider/: __init__.py  base_llm_provider.py  gemini_provider.py  groq_provider.py  llm_factory.py
src/processing/: document_processor.py  multimodal_summarizer.py
src/processing/parsers/: __init__.py  base_parser.py  md_parser.py  pdf_parser.py
src/prompts/en/: query_context.txt  summarize_img.txt  summarize_table.txt  summarize_text.txt
src/prompts/es/: query_context.txt  (+3 more)
src/recommendation/: __init__.py  adapters.py  categorizer.py  engines.py  explainer.py  models.py
src/ui/: tab1_processing.py  tab2_visualization.py  tab3_chat.py  tab4_recommendations.py
