[project]
name = "tracerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling==2.53.0",
    "docling-core>=2.48.1",
    "streamlit>=1.49.1",
    "pillow>=11.3.0",
    "pymilvus>=2.6.2",
    "sqlalchemy>=2.0.43",
    "sentence-transformers>=5.1.0",
    "pyyaml>=6.0.2",
]
